Fixed issue with Emulator not being constructed correctly

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         const canvas = document.getElementById("canvas")
 
-        const emu = new Emulator()
+        const emu = new Emulator(canvas)
 
         const fileInput = document.getElementById("file")
         fileInput.addEventListener("change", event => {
