--- a/index.html
+++ b/index.html
@@ -5,46 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JK Chip-8</title>
-    <script type="module">
-        import { Emulator } from "./dist/chip8.js"
-
-        let rom = undefined
-
-        const canvas = document.getElementById("canvas")
-        const fileInput = document.getElementById("file")
-        const startBtn = document.getElementById("startBtn")
-
-        const emu = new Emulator(canvas)
-
-        fileInput.addEventListener("change", event => {
-            const file = event.target.files[0]
-            if (!file) {
-                console.log("No file selected")
-                return
-            }
-
-            const reader = new FileReader()
-            reader.onload = event => {
-                const result = event.target?.result
-                if (result instanceof ArrayBuffer) {
-                    rom = result
-                    console.log("Read rom", rom)
-                }
-            }
-            reader.readAsArrayBuffer(file)
-        })
-
-        startBtn.addEventListener("click", event => {
-            if (!rom) {
-                console.error("Rom file must have been loaded")
-                return
-            }
-            emu.load(rom)
-            emu.start()
-        })
-
-
-    </script>
+    <script type="module" src="dist/chip8.js"></script>
 </head>
 
 <body>
