--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JK Chip-8</title>
-    <script type="module" src="dist/chip8.js"></script>
+    <script type="module" src="./index.js"></script>
 </head>
 
 <body>
