Added stop and continue buttons to html page

--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,8 @@
     <input type="file" name="file" id="file">
     <canvas width="512" height="256" id="canvas"></canvas>
     <button id="startBtn">Start emulation</button>
+    <button id="stopBtn">Stop emulation</button>
+    <button id="continueBtn">Continue emulation</button>
 </body>
 
 </html>
