--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,18 @@
     <button id="startBtn">Start emulation</button>
     <button id="stopBtn">Stop emulation</button>
     <button id="continueBtn">Continue emulation</button>
+    <div>
+      <label for="speed">Emulation speed</label>
+      <input type="range" min="5" max="1000" value="60" step="5" id="speed">
+    </div>
+    <div>
+      <label for="frequency">Sound frequency</label>
+      <input type="range" min="40" max="1000" value="440" step="20" id="frequency">
+    </div>
+    <div>
+      <label for="volume">Sound volume</label>
+      <input type="range" min="0" max="1" value="0.5" step="0.01" id="volume">
+    </div>
 </body>
 
 </html>
