Adjusted web files to use webpack bundle

--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JK Chip-8</title>
+    <script src="./dist/main.js"></script>
     <script type="module" src="./index.js"></script>
 </head>
 
@@ -24,7 +25,7 @@
     </div>
     <div>
       <label for="volume">Sound volume</label>
-      <input type="range" min="0" max="1" value="0.5" step="0.01" id="volume">
+      <input type="range" min="0" max="1" value="0.25" step="0.01" id="volume">
     </div>
 </body>
 
