Added reset button

--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
     <button id="startBtn">Start emulation</button>
     <button id="stopBtn">Stop emulation</button>
     <button id="continueBtn">Continue emulation</button>
+    <button id="resetBtn">Reset emulation</button>
     <div>
       <label for="speed">Emulation speed</label>
       <input type="range" min="5" max="1000" value="60" step="5" id="speed">
