--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
     <input type="file" name="file" id="file">
     <canvas width="512" height="256" id="canvas"></canvas>
     <button id="startBtn">Start emulation</button>
-    <button id="stopBtn">Stop emulation</button>
+    <button id="pauseBtn">Pause emulation</button>
     <button id="continueBtn">Continue emulation</button>
     <button id="resetBtn">Reset emulation</button>
     <div>
